# yew_ssr_client_hybrid_rendering_template

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build-debug.sh  build-production.sh  index.html
src/: lib.rs  yew_routes.rs
src/backend_ssr/: actix_server.rs  mod.rs  yew_actix_ssr_renderer.rs  yew_server_app.rs
src/pages/: about.rs  base_page.rs  home.rs  mod.rs  test.rs
src/pages/components/: about_content.rs  home_content.rs  mod.rs  test_content.rs
