[package]
name = "yew_hybrid_ssr_client_template"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = "z"
debug-assertions = false
overflow-checks = true
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
debug = false
strip = 'debuginfo'

[[bin]]
name = "server_app"

[dependencies]
yew-router = { git = "https://github.com/yewstack/yew.git" }
serde = { version = "1", features = ["derive"] }
log = "0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
yew = { git = "https://github.com/yewstack/yew.git", features = ["ssr"] } # Change this to your path
tokio = { version = "1", features = ["full"] }
actix-web = "4"
actix-files = "0"
clap = { version = "4", features = ["derive"] }
qstring = "0"
env_logger = "0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
yew = { git = "https://github.com/yewstack/yew.git", features = ["hydration"] } # Change this to your path
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"

